Added question 1 and its choices for answers

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <li>
                   <label>
                     <input type="radio" name="answer2" value="0">
-                    msg("GeeksforGeeks"
+                    msg("GeeksforGeeks")
                   </label>
                 </li>
                 <li>
