Added question 2 and choices for answers

--- a/index.html
+++ b/index.html
@@ -48,3 +48,27 @@
             </div>
           </li>
           <li>
+            <label for="question2">Which of the following is the correct syntax to display "GeeksforGeeks" in an alert box using JavaScript</label>
+            <div class="radio" id="num2">
+              <ul>
+                <li>
+                  <label>
+                    <input type="radio" name="answer2" value="0">
+                    alertbox("GeeksforGeeks")
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="answer2" value="0">
+                    msg("GeeksforGeeks")
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="answer2" value="3">
+                    alert("GeeksforGeeks")
+                  </label>
+                </li>
+              </ul>
+            </div>
+            </li>
