Added question 3 and choices for answers

--- a/index.html
+++ b/index.html
@@ -72,3 +72,22 @@
               </ul>
             </div>
             </li>
+            <li>
+            <label for="question3">The external JavaScript file must contain the script tag.True or false </label>
+            <div class="radio" id="num3">
+              <ul>
+                <li>
+                  <label>
+                    <input type="radio" name="answer3" value="0">
+                    True
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="answer3" value="3">
+                    False
+                  </label>
+                </li>
+              </ul>
+            </div>
+            </li>
