Added question 4 and choices for answers

--- a/index.html
+++ b/index.html
@@ -91,3 +91,28 @@
               </ul>
             </div>
             </li>
+            <li>
+            <label for="question4">What will be the command to print the number of characters in the string “GeeksforGeeks”? </label>
+            <div class="radio" id="num4">
+              <ul>
+                <li>
+                  <label>
+                    <input type="radio" name="answer4" value="0">
+                    document.write(“GeeksforGeeks”.len);
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="answer4" value="0">
+                    document.write(sizeof(“GeeksforGeeks”));
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="answer4" value="3">
+                    document.write(“GeeksforGeeks”.length);
+                  </label>
+                </li>
+              </ul>
+            </div>
+            </li>
