Added question 5 and choices for answers

--- a/index.html
+++ b/index.html
@@ -116,3 +116,28 @@
               </ul>
             </div>
             </li>
+            <li>
+            <label for="question5">What is the JavaScript syntax for printing values in Console?</label>
+            <div class="radio" id="num5">
+              <ul>
+                <li>
+                  <label>
+                    <input type="radio" name="answer5" value="0">
+                    print(5)
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="answer5" value="3">
+                    console.log(5);
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="answer5" value="0">
+                    print.console(5);
+                  </label>
+                </li>
+              </ul>
+            </div>
+            </li>
