Added question 6 and choices for answers

--- a/index.html
+++ b/index.html
@@ -141,3 +141,28 @@
               </ul>
             </div>
             </li>
+            <li>
+            <label for="question6">How does one link html to a css file?</label>
+            <div class="radio" id="num6">
+              <ul>
+                <li>
+                  <label>
+                    <input type="radio" name="answer6" value="0">
+                    script src...
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="answer6" value="0">
+                    img src...
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="answer6" value="3">
+                    link href...
+                  </label>
+                </li>
+              </ul>
+            </div>
+            </li>
