Added question 7 and choices for answers

--- a/index.html
+++ b/index.html
@@ -166,3 +166,28 @@
               </ul>
             </div>
             </li>
+            <li>
+            <label for="question7">What does one do to stop the default action of an element from happening</label>
+            <div class="radio" id="num7">
+              <ul>
+                <li>
+                  <label>
+                    <input type="radio" name="answer7" value="3">
+                    event.preventDefault()
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="answer7" value="0">
+                    .click()
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="answer7" value="0">
+                    .ready()
+                  </label>
+                </li>
+              </ul>
+            </div>
+            </li>
