Added question 8 and choices for answers

--- a/index.html
+++ b/index.html
@@ -191,3 +191,28 @@
               </ul>
             </div>
             </li>
+            <li>
+            <label for="question8">What does $(document).ready() do?</label>
+            <div class="radio" id="num8">
+              <ul>
+                <li>
+                  <label>
+                    <input type="radio" name="answer8" value="3">
+                    To make a function available after the document is loaded.
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="answer8" value="0">
+                    It attaches a function to run when a click event occurs.
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="answer8" value="0">
+                    It allows to initiate form sending from JavaScript.
+                  </label>
+                </li>
+              </ul>
+            </div>
+            </li>
