Added question 9 and choices for answers

--- a/index.html
+++ b/index.html
@@ -216,3 +216,28 @@
               </ul>
             </div>
             </li>
+            <li>
+            <label for="question9">Why do we use parseInt?</label>
+            <div class="radio" id="num9">
+              <ul>
+                <li>
+                  <label>
+                    <input type="radio" name="answer9" value="0">
+                    To convert numbers to words
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="answer9" value="0">
+                    To convert words to strings
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="answer9" value="3">
+                    To convert strings to numbers
+                  </label>
+                </li>
+              </ul>
+            </div>
+            </li>
