Added question 10 and choices for answers

--- a/index.html
+++ b/index.html
@@ -241,3 +241,30 @@
               </ul>
             </div>
             </li>
+            <li>
+            <label for="question10">Why do we use <em>var?</em></label>
+            <div class="radio" id="num10">
+              <ul>
+                <li>
+                  <label>
+                    <input type="radio" name="answer10" value="0">
+                    To make the scope local
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="answer10" value="3">
+                    To make the scope global
+                  </label>
+                </li>
+                <li>
+                  <label>
+                    <input type="radio" name="answer3" value="0">
+                    To make the scope international
+                  </label>
+                </li>
+              </ul>
+            </div>
+            </li>
+            </ol>
+            </div>
