Added button for submitting work done

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                 </li>
               </ul>
             </div>
-            </li>
-            <li>
+          </li>
+          <li>
             <label for="question3">The external JavaScript file must contain the script tag.True or false </label>
             <div class="radio" id="num3">
               <ul>
@@ -90,8 +90,8 @@
                 </li>
               </ul>
             </div>
-            </li>
-            <li>
+          </li>
+          <li>
             <label for="question4">What will be the command to print the number of characters in the string “GeeksforGeeks”? </label>
             <div class="radio" id="num4">
               <ul>
@@ -115,8 +115,8 @@
                 </li>
               </ul>
             </div>
-            </li>
-            <li>
+          </li>
+          <li>
             <label for="question5">What is the JavaScript syntax for printing values in Console?</label>
             <div class="radio" id="num5">
               <ul>
@@ -140,8 +140,8 @@
                 </li>
               </ul>
             </div>
-            </li>
-            <li>
+          </li>
+          <li>
             <label for="question6">How does one link html to a css file?</label>
             <div class="radio" id="num6">
               <ul>
@@ -165,8 +165,8 @@
                 </li>
               </ul>
             </div>
-            </li>
-            <li>
+          </li>
+          <li>
             <label for="question7">What does one do to stop the default action of an element from happening</label>
             <div class="radio" id="num7">
               <ul>
@@ -190,8 +190,8 @@
                 </li>
               </ul>
             </div>
-            </li>
-            <li>
+          </li>
+          <li>
             <label for="question8">What does $(document).ready() do?</label>
             <div class="radio" id="num8">
               <ul>
@@ -215,8 +215,8 @@
                 </li>
               </ul>
             </div>
-            </li>
-            <li>
+          </li>
+          <li>
             <label for="question9">Why do we use parseInt?</label>
             <div class="radio" id="num9">
               <ul>
@@ -240,8 +240,8 @@
                 </li>
               </ul>
             </div>
-            </li>
-            <li>
+          </li>
+          <li>
             <label for="question10">Why do we use <em>var?</em></label>
             <div class="radio" id="num10">
               <ul>
@@ -265,6 +265,17 @@
                 </li>
               </ul>
             </div>
-            </li>
-            </ol>
-            </div>
+          </li>
+        </ol>
+      </div>
+      button type="submit" class="btn">SUBMIT</button>
+    </form>
+    <div id="output">
+
+    </div>
+  </div>
+
+
+</body>
+
+</html>
