this file is updated

--- a/index.html
+++ b/index.html
@@ -12,270 +12,13 @@
 <body>
   <div class="container">
     <div class="jumbotron">
-      <h1>QUIZ BOARD</h1>
-      <h2>OUT OF:30</h2>
-      <p>(This quiz consists of 10 questions. Kindly answer all.)</p>
-      <p>After you submit your answers, your score will appear here:</p>
-      <div class="score" id="output">0</div>
-      <div class="score" id="output2"></div>
-    </div>
-    <form id=quiz>
-      <div class="well">
-        <ol>
-          <li>
-            <label for="question1">What is the HTML tag under which one can write the Javascript code</label>
-            <div class="radio" id="num1">
-              <ul>
-                <li>
-                  <label>
-                    <input type="radio" name="answer1" value="0">
-                    JavaScript
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer1" value="0">
-                    scripted
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer1" value="3">
-                    script
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <label for="question2">Which of the following is the correct syntax to display "GeeksforGeeks" in an alert box using JavaScript</label>
-            <div class="radio" id="num2">
-              <ul>
-                <li>
-                  <label>
-                    <input type="radio" name="answer2" value="0">
-                    alertbox("GeeksforGeeks")
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer2" value="0">
-                    msg("GeeksforGeeks")
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer2" value="3">
-                    alert("GeeksforGeeks")
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <label for="question3">The external JavaScript file must contain the script tag.True or false </label>
-            <div class="radio" id="num3">
-              <ul>
-                <li>
-                  <label>
-                    <input type="radio" name="answer3" value="0">
-                    True
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer3" value="3">
-                    False
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <label for="question4">What will be the command to print the number of characters in the string “GeeksforGeeks”? </label>
-            <div class="radio" id="num4">
-              <ul>
-                <li>
-                  <label>
-                    <input type="radio" name="answer4" value="0">
-                    document.write(“GeeksforGeeks”.len);
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer4" value="0">
-                    document.write(sizeof(“GeeksforGeeks”));
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer4" value="3">
-                    document.write(“GeeksforGeeks”.length);
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <label for="question5">What is the JavaScript syntax for printing values in Console?</label>
-            <div class="radio" id="num5">
-              <ul>
-                <li>
-                  <label>
-                    <input type="radio" name="answer5" value="0">
-                    print(5)
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer5" value="3">
-                    console.log(5);
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer5" value="0">
-                    print.console(5);
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <label for="question6">How does one link html to a css file?</label>
-            <div class="radio" id="num6">
-              <ul>
-                <li>
-                  <label>
-                    <input type="radio" name="answer6" value="0">
-                    script src...
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer6" value="0">
-                    img src...
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer6" value="3">
-                    link href...
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <label for="question7">What does one do to stop the default action of an element from happening</label>
-            <div class="radio" id="num7">
-              <ul>
-                <li>
-                  <label>
-                    <input type="radio" name="answer7" value="3">
-                    event.preventDefault()
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer7" value="0">
-                    .click()
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer7" value="0">
-                    .ready()
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <label for="question8">What does $(document).ready() do?</label>
-            <div class="radio" id="num8">
-              <ul>
-                <li>
-                  <label>
-                    <input type="radio" name="answer8" value="3">
-                    To make a function available after the document is loaded.
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer8" value="0">
-                    It attaches a function to run when a click event occurs.
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer8" value="0">
-                    It allows to initiate form sending from JavaScript.
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <label for="question9">Why do we use parseInt?</label>
-            <div class="radio" id="num9">
-              <ul>
-                <li>
-                  <label>
-                    <input type="radio" name="answer9" value="0">
-                    To convert numbers to words
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer9" value="0">
-                    To convert words to strings
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer9" value="3">
-                    To convert strings to numbers
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <label for="question10">Why do we use <em>var?</em></label>
-            <div class="radio" id="num10">
-              <ul>
-                <li>
-                  <label>
-                    <input type="radio" name="answer10" value="0">
-                    To make the scope local
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer10" value="3">
-                    To make the scope global
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer3" value="0">
-                    To make the scope international
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </li>
-        </ol>
+      <div class="form-group">
+        <label for="name">First Name</label>
+        <input id="first name" class="form-control" type="text">
       </div>
-      <button type="submit" class="btn">SUBMIT</button>
-    </form>
-    <div id="output">
-
-    </div>
-  </div>
-
-
-</body>
-
-</html>
+      <div class="form-group">
+        <label for="name">Second Name</label>
+        <input id="second name" class="form-control" type="text">
+        <br>
+        <br>
+        <a href="index2.html"><button>BEGIN WHEN READY</button></a>
