--- a/index2.html
+++ b/index2.html
@@ -1,282 +1,122 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <link rel="icon" href="https://cdn1.iconfinder.com/data/icons/social-messaging-productivity-4/128/ask-question-2-512.png" type="image/gif" sizes="16x16">
+    <meta name="viewport" content="width=device-width user-scalable=no">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
-<head>
-  <meta charset="utf-8">
-  <a href="index2.html">
-    <title>Quiz-board</title>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
-</head>
-
-<body>
-  <div class="container">
-    <h1>QUIZ BOARD</h1>
-    <h2>OUT OF:30</h2>
-
-    <p>(This quiz consists of 10 questions. Kindly answer all.)</p>
-    <p>After you submit your answers, your score will appear here:</p>
-    <div class="score" id="output">0</div>
-    <div class="score" id="output2"></div>
-
-    <form id=quiz>
-      <div class="well">
-        <ol>
-          <li>
-            <label for="question1">What is the HTML tag under which one can write the Javascript code</label>
-            <div class="radio" id="num1">
-              <ul>
-                <li>
-                  <label>
-                    <input type="radio" name="answer1" value="0">
-                    JavaScript
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer1" value="0">
-                    scripted
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer1" value="3">
-                    script
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <label for="question2">Which of the following is the correct syntax to display "GeeksforGeeks" in an alert box using JavaScript</label>
-            <div class="radio" id="num2">
-              <ul>
-                <li>
-                  <label>
-                    <input type="radio" name="answer2" value="0">
-                    alertbox("GeeksforGeeks")
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer2" value="0">
-                    msg("GeeksforGeeks")
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer2" value="3">
-                    alert("GeeksforGeeks")
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <label for="question3">The external JavaScript file must contain the script tag.True or false </label>
-            <div class="radio" id="num3">
-              <ul>
-                <li>
-                  <label>
-                    <input type="radio" name="answer3" value="0">
-                    True
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer3" value="3">
-                    False
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <label for="question4">What will be the command to print the number of characters in the string “GeeksforGeeks”? </label>
-            <div class="radio" id="num4">
-              <ul>
-                <li>
-                  <label>
-                    <input type="radio" name="answer4" value="0">
-                    document.write(“GeeksforGeeks”.len);
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer4" value="0">
-                    document.write(sizeof(“GeeksforGeeks”));
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer4" value="3">
-                    document.write(“GeeksforGeeks”.length);
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <label for="question5">What is the JavaScript syntax for printing values in Console?</label>
-            <div class="radio" id="num5">
-              <ul>
-                <li>
-                  <label>
-                    <input type="radio" name="answer5" value="0">
-                    print(5)
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer5" value="3">
-                    console.log(5);
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer5" value="0">
-                    print.console(5);
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <label for="question6">How does one link html to a css file?</label>
-            <div class="radio" id="num6">
-              <ul>
-                <li>
-                  <label>
-                    <input type="radio" name="answer6" value="0">
-                    script src...
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer6" value="0">
-                    img src...
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer6" value="3">
-                    link href...
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <label for="question7">What does one do to stop the default action of an element from happening</label>
-            <div class="radio" id="num7">
-              <ul>
-                <li>
-                  <label>
-                    <input type="radio" name="answer7" value="3">
-                    event.preventDefault()
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer7" value="0">
-                    .click()
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer7" value="0">
-                    .ready()
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <label for="question8">What does $(document).ready() do?</label>
-            <div class="radio" id="num8">
-              <ul>
-                <li>
-                  <label>
-                    <input type="radio" name="answer8" value="3">
-                    To make a function available after the document is loaded.
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer8" value="0">
-                    It attaches a function to run when a click event occurs.
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer8" value="0">
-                    It allows to initiate form sending from JavaScript.
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <label for="question9">Why do we use parseInt?</label>
-            <div class="radio" id="num9">
-              <ul>
-                <li>
-                  <label>
-                    <input type="radio" name="answer9" value="0">
-                    To convert numbers to words
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer9" value="0">
-                    To convert words to strings
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer9" value="3">
-                    To convert strings to numbers
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <label for="question10">Why do we use <em>var?</em></label>
-            <div class="radio" id="num10">
-              <ul>
-                <li>
-                  <label>
-                    <input type="radio" name="answer10" value="0">
-                    To make the scope local
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer10" value="3">
-                    To make the scope global
-                  </label>
-                </li>
-                <li>
-                  <label>
-                    <input type="radio" name="answer3" value="0">
-                    To make the scope international
-                  </label>
-                </li>
-              </ul>
-            </div>
-          </li>
-        </ol>
+    <link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+      <div class="container">
+        <h1 class="text-info">Quiz - Board</h1>
+      <center id="tt">
+        <form id="name">
+          <p id="medium" class="text-muted col-md-12">enter your name</p>
+          <input type="text" id="firstName" class="form-control col-9" name="" value="" placeholder="Your Name" autofocus required><br>
+          <p id="medium" class="text-muted col-md-12">enter School Name</p>
+          <input type="text" id="schoolName" class="form-control col-9" name="" value="" placeholder="Your School Name" required><br>
+          <button type="submit" class="btn btn-info" onclick="set()" name="button">Proceed</button>
+        </form>
+        <div id="begin">
+          <p id="seen" class="text-muted col-md-8"> <span id="person"></span> how well do you know Javascript?<span id="school"></span> wishes to test your prowess in javascript</p>
+          <p class="holder">
+            <button type="button" id="start" class="btn btn-success" name="button">Start Test</button>
+          </p>
+        </div>
+        </center>
       </div>
-      <button type="submit" class="btn">SUBMIT</button>
-    </form>
-
-
-  </div>
-</div>
-
-</body>
-
+  <div class="container">
+    <div id="questions">
+        <div class="form-group">
+          <form id="quiz">
+            <h4>javascript Test</h4>
+            <!--Question 1-->
+            <label for="Q1">which is a scripting language <strong>(10mks)</strong></label><br>
+            <input type="radio" name="Q1" value="0" required>Jquery <br>
+            <input type="radio" name="Q1" value="10">javascript <br>
+            <!--Question 2-->
+            <label for="Q2">Which of the following is a logical operator <strong>(10mks)</strong></label><br>
+            <input type="radio" name="Q2" value="0" required>=== <br>
+            <input type="radio" name="Q2" value="10">|| <br>
+            <!--Question 3-->
+            <label for="Q3">What does mutator methods do to an array? <strong>(10mks)</strong></label><br>
+            <input type="radio" name="Q3" value="10" required>Modify Array<br>
+            <input type="radio" name="Q3" value="0">Don't modify <br>
+            <!--Question 4-->
+            <label for="Q4">How do you set a constant in Javascript? <strong>(10mks)</strong></label><br>
+            <input type="radio" name="Q4" value="10" required>Let <br>
+            <input type="radio" name="Q4" value="0">var <br>
+            <!--Question 5-->
+            <label for="Q5">Which one is <strong>NOT</strong> used to show a pop-up box? <strong>(10mks)</strong></label><br>
+            <input type="radio" name="Q5" value="0" required>Alert()<br>
+            <input type="radio" name="Q5" value="10">Console.log() <br>
+            <!--Question 6-->
+            <label for="Q6">Which one adds an element at the end of an array? <strong>(10mks)</strong></label><br>
+            <input type="radio" name="Q6" value="10" required>.push()<br>
+            <input type="radio" name="Q6" value="0">.pop() <br>
+            <button type="submit" class="btn btn-info" name="button">Submit</button>
+          </form>
+        </div>
+      </div>
+          <center>
+          <div id="hide">
+            <div id="results"></div>
+            <button type="button" id="seeResults" class="btn btn-success" name="button">See Answers</button>
+          </div>
+        </center>
+      </div>
+      <div class="container">
+          <div id="answers">
+            <div class="form-group">
+              <form id=>
+                <h4>Answers</h4>
+                <!--Question 1-->
+                <label for="Q1">which is a scripting language <strong>(10mks)</strong></label><br>
+                <input type="radio" name="Q1" value="0" disabled>Jquery <br>
+                <p class="text-success">
+                  <input type="radio" name="Q1" value="10" checked>javascript
+                </p>
+                <!--Question 2-->
+                <label for="Q2">Which of the following is a logical operator <strong>(10mks)</strong></label><br>
+                <input type="radio" name="Q2" value="0" disabled>=== <br>
+                <p class="text-success">
+                <input type="radio" name="Q2" value="10" checked>||
+              </p>
+                <!--Question 3-->
+                <label for="Q3">What does mutator methods do to an array? <strong>(10mks)</strong></label><br>
+                <p class="text-success">
+                <input type="radio" name="Q3" value="10" checked>Modify Array
+              </p>
+                <input type="radio" name="Q3" value="0" disabled>Don't modify <br>
+                <!--Question 4-->
+                <label for="Q4">How do you set a constant in Javascript? <strong>(10mks)</strong></label><br>
+                <p class="text-success">
+                <input type="radio" name="Q4" value="10" checked>Let
+              </p>
+                <input type="radio" name="Q4" value="0" disabled>var <br>
+                <!--Question 5-->
+                <label for="Q5">Which one is <strong>NOT</strong> used to show a pop-up box? <strong>(10mks)</strong></label><br>
+                <input type="radio" name="Q5" value="0" disabled>Alert()<br>
+                <p class="text-success">
+                <input type="radio" name="Q5" value="10" checked>Console.log()
+              </p>
+                <!--Question 6-->
+                <label for="Q6">Which one adds an element at the end of an array? <strong>(10mks)</strong></label><br>
+                <p class="text-success">
+                <input type="radio" name="Q6" value="10" checked>.push()
+              </p>
+                <input type="radio" name="Q6" value="0" disabled>.pop() <br>
+              </form>
+              <center>
+          </div>
+        </div>
+      </div>
+    <script   src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="js/scripts.js">
+    </script>
+  </body>
 </html>
